--- a/digires/home/static/style/registerstyle.css
+++ b/digires/home/static/style/registerstyle.css
@@ -4,58 +4,50 @@
     font-family: 'Nunito Sans', sans-serif;
 }
 
-#form-fill{
-    display: flex;
-    justify-content: space-between;
-}
-
-h1{
-    color: rgb(49, 98, 155);
-    margin:0px 0px 15px 0px;
-}
-
-form{
-    margin: 0px 0px 0px 100px;
-}
-
 label{
     color: rgb(49, 98, 155);
     font-size: x-large;
 }
 
-input, textarea{
+input{
     padding: 10px;
     border: 1px solid #23c5c5;
     border-radius: 8px;
     border-color: #23c5c5;
     font-size: 17px;
     margin: 0px 0px 10px 20px;
-    width: 110%;
 }
 
-input[type=checkbox]{
-    width: auto;
-}
-
-button{
+input[type="submit"]{
     border-radius: 8px;
-    padding: 10px 40px;
+    padding: 8px 20px;
     font-size: 20px;
     cursor: pointer;
     background-color: white; 
     color: #23c5c5; 
     border: 2px solid #23c5c5;
-    margin: 0px 0px 10px 50px;
 }
-  
-button:hover {
+
+input[type="submit"]:hover{
     background-color:rgb(49, 98, 155);
     border-color: rgb(49, 98, 155);
 }
 
-.image{
-    margin: 300px 10px 0px 0px;
-    position: sticky;
+p{
+    color: rgb(49, 98, 155);
+
 }
 
+div{
+    padding: 60px;
+    text-align: center;
+}
 
+a{
+    text-decoration: none;
+    color: rgb(49, 98, 155);
+    cursor: pointer;
+}
+a:hover{
+    color: #23c5c5;
+}
