--- a/digires/home/templates/temp1.html
+++ b/digires/home/templates/temp1.html
@@ -1,41 +1,31 @@
 {% load static %}
     
 {% block css_files %}
-    <link rel="stylesheet" href="{% static '' %}">
+    <link rel="stylesheet" href="{% static 'style/Temp1style.css' %}">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+
 {% endblock  %}
 
 {% block content %}
 
 
-<div class="container" id="resume-template">
-    <div class="flex">
+<div id="resume-template">
+    <div class="details">
         <div class="col-1">
             {% comment %} column:1 {% endcomment %}
-            <div>
-                <p id="nameT1">{{userdetail.name}}</p>
-                <p id="contactT">{{userdetail.phone}}</p>
-                <p id="emailT">{{userdetail.email}}</p>
-                <p id="addressT">{{userdetail.address}}</p>
-                <hr>
-                <p><a id="linkedinT" href="#">{{userdetail.linkedin}}</a></p>
-                <p><a id="githubT" href="#">{{userdetail.github}}</a></p>
-                <p><a id="webT" href="#">{{userdetail.web}}</a></p>
+            <div class="right-side">
+                <p id="nameT1"><i class="uil uil-user icon"></i>{{userdetail.name}}</p>
+                <p id="contactT"><i class="uil uil-phone-volume icon"></i>{{userdetail.phone}}</p>
+                <p id="emailT"><i class="uil uil-envelope-alt icon"></i>{{userdetail.email}}</p>
+                <p id="addressT"><i class="uil uil-estate icon"></i>{{userdetail.address}}</p>
+
+                <p><i class="uil uil-linkedin icon"></i><a id="linkedinT" href="#">{{userdetail.linkedin}}</a></p>
+                <p><i class="uil uil-github icon"></i><a id="githubT" href="#">{{userdetail.github}}</a></p>
+                <p><i class="uil uil-link-h icon"></i><a id="webT" href="#">{{userdetail.web}}</a></p>
             </div>
         </div>
         <div class="col-2">
-            <h1 id="nameT2">{{userdetail.name}}</h1>
-
-            {% comment %} work exp {% endcomment %}
-            <div class="card">
-                <div class="card-header">
-                    <h3>Work Exp.</h3>
-                </div>
-                <div class="card-body">
-                    <ul id="wexT">
-                        <li>{{userdetail.workexp}}</li>
-                    </ul>
-                </div>
-            </div>
+            <h1>{{userdetail.name}}</h1>
 
             <div class="card">
                 <div class="card-header">
@@ -47,7 +37,8 @@
                     </ul>
                 </div>
             </div>
-            
+
+
             <div class="card">
                 <div class="card-header">
                     <h3>Academic Qualifications</h3>
@@ -55,6 +46,17 @@
                 <div class="card-body">
                     <ul id="aqT">
                         <li>{{userdetail.acadqual}}</li>
+                    </ul>
+                </div>
+            </div>
+            {% comment %} work exp {% endcomment %}
+            <div class="card">
+                <div class="card-header">
+                    <h3>Work Experience</h3>
+                </div>
+                <div class="card-body">
+                    <ul id="wexT">
+                        <li>{{userdetail.workexp}}</li>
                     </ul>
                 </div>
             </div>
@@ -70,13 +72,12 @@
                 </div>
             </div>
 
-            
         </div>
     </div>
-    <div class = "print-button" >
-        <button>Print Your Resume</button>
-    </div>
+    
 </div>
-
+<button>
+    <a class="print-button" href="#">Print Your Resume</a>
+</button>
 
 {% endblock  %}
