--- a/digires/home/static/style/temp1style.css
+++ b/digires/home/static/style/temp1style.css
@@ -8,6 +8,7 @@
 #resume-template{
     display: grid;
     background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+
 }
 
 .details{
@@ -40,26 +41,11 @@
 
 p, h1, .card{
     margin: 0px 0px 20px 0px;
+    
 }
 
 i{
     margin: 0px 10px 0px 0px;
-}
-
-button {
-    border-radius: 10px;
-    padding: 12px 10px;
-    width: 100%;
-    font-size: 20px;
-    cursor: pointer;
-    background-color: white; 
-    color: #23c5c5; 
-    border: 2px solid #23c5c5;
-}
-
-button:hover {
-    background-color:rgb(49, 98, 155);
-    border-color: rgb(49, 98, 155);
 }
 
 a{
@@ -71,3 +57,24 @@ a{
     margin-right: 5px;
     color: rgb(49, 98, 155);
 }
+
+.uil-copy, .uil-print{
+    cursor: pointer;
+    margin: 0px 0px 0px 10px;
+}
+
+.down{
+    margin: 10px 0px 0px 0px;
+    text-align: center;
+}
+
+@media print {
+
+    .down{
+         display: none;
+    }
+    #resume-template{
+        border-radius: 10px;
+    }
+
+  }
